# zero2prod

./: .gitignore  Cargo.toml  compose.yaml  testing.http
.github/workflows/: pr-builder.yaml
scripts/: init_db.ps1  init_db.sh
src/: configuration.rs  errors.rs  libs.rs  main.rs  middleware.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
