[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Calem Roelofs <hello@kaylum.io>"]
edition = "2021"

[lib]
path = "src/libs.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = "0.4.28"
config = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.1"

default-features = false

features = [
    "runtime-tokio", 
    "tls-rustls",
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
axum-test = "12.2.0"
