[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Calem Roelofs <hello@kaylum.io>"]
edition = "2021"

[lib]
path = "src/libs.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = "0.4.28"
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "request-id"] }
tower-request-id = "0.2.1"
tracing = "0.1"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
opentelemetry = "0.20"
opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }
tracing-opentelemetry = "0.21"
opentelemetry_sdk = "0.20.0"
opentelemetry-jaeger = "0.19.0"

[dependencies.sqlx]
version = "0.7.1"

default-features = false

features = [
    "runtime-tokio", 
    "tls-rustls",
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
axum-test = "12.2.0"
once_cell = "1.18.0"
